--- a/cc/clangd/CMakeLists.txt
+++ b/cc/clangd/CMakeLists.txt
@@ -12,12 +12,10 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_CXX_COMPILER clang++)
-
-include_directories(source)
+include_directories($ENV{CPLUS_INCLUDE_PATH} source)
 
 # puts all .cpp files inside src to the SOURCES variable
 # file(GLOB SOURCES foo/**/*.cpp)
 
 # compiles the files defined by SOURCES to generante the executable defined by EXEC
-# add_executable(${EXEC} ${SOURCES})
 add_executable(${EXEC} ./source/exe/main.cc)
