--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "envoy/envoy"]
-	path = envoy/envoy
+[submodule "_third_party/envoy"]
+	path = _third_party/envoy
 	url = git@github.com:envoyproxy/envoy.git
