--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,11 @@ services:
     ports:
       - ${ELASTICSEARCH_PORT}:9200
 
+  envoy-filter-example:
+    image: envoyproxy/envoy:v1.12.0
+    ports:
+      - ${ENVOY_UPSTREAM_PORT}:8080
+
   envoy-upstream:
     build:
       context: ./envoy/upstream
