--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ GRPC_WEB_ENVOY_PORT=40000
 GRPC_WEB_SERVER_PORT=40001
 ENVOY_UPSTREAM_PORT=40002
 ELASTICSEARCH_PORT=40003
+ENVOY_FILTER_EXAMPLE_PORT=40004
