--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,11 @@ services:
 
   envoy-filter-example:
     image: envoyproxy/envoy:v1.12.0
+    volumes:
+      - ./bin/envoy-filter-example:/usr/local/bin/envoy
+      - ./envoy/filter/example/envoy.yaml:/etc/envoy/envoy.yaml
     ports:
-      - ${ENVOY_UPSTREAM_PORT}:8080
+      - ${ENVOY_FILTER_EXAMPLE_PORT}:10000
 
   envoy-upstream:
     build:
