--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GRPC_WEB_SERVER_PORT=40001
 ENVOY_UPSTREAM_PORT=40002
 ELASTICSEARCH_PORT=40003
 ENVOY_FILTER_EXAMPLE_PORT=40004
+ENVOY_FILTER_HELLO_PORT=40005
