--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,14 @@ services:
     ports:
       - ${ENVOY_FILTER_EXAMPLE_PORT}:10000
 
+  envoy-filter-hello:
+    image: envoyproxy/envoy:v1.12.0
+    volumes:
+      - ./bin/envoy-filter-hello:/usr/local/bin/envoy
+      - ./envoy/filter/example/envoy.yaml:/etc/envoy/envoy.yaml
+    ports:
+      - ${ENVOY_FILTER_HELLO_PORT}:10000
+
   envoy-upstream:
     build:
       context: ./envoy/upstream
