--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,13 @@ services:
     volumes:
       - ./:/usr/local/src/lab:cached
 
+  emscripten:
+    build:
+      context: ./cc/emscripten
+    working_dir: /usr/local/src/lab
+    volumes:
+      - ./:/usr/local/src/lab:cached
+
   grpc-web-envoy:
     image: envoyproxy/envoy:v1.12.0
     ports:
