--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "_third_party/envoy-filter-example"]
 	path = _third_party/envoy-filter-example
 	url = git@github.com:envoyproxy/envoy-filter-example.git
+[submodule "_third_party/istio-installer"]
+	path = _third_party/istio-installer
+	url = git@github.com:istio/installer.git
