--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ ENVOY_UPSTREAM_PORT=40002
 ELASTICSEARCH_PORT=40003
 ENVOY_FILTER_EXAMPLE_PORT=40004
 ENVOY_FILTER_HELLO_PORT=40005
+ENVOY_FILTER_WASM_PORT=40006
