--- a/envoy/filter/wasm/envoy.yaml
+++ b/envoy/filter/wasm/envoy.yaml
@@ -32,6 +32,18 @@ static_resources:
                   route:
                     cluster: upstream
             http_filters:
+              - name: envoy.filters.http.wasm
+                config:
+                  config:
+                    name: "my_plugin"
+                    root_id: "my_root_id"
+                    vm_config:
+                      vm_id: "my_vm_id"
+                      runtime: "envoy.wasm.runtime.wavm"
+                      code:
+                        local:
+                          filename: "/etc/envoy/filter.wasm"
+                      allow_precompiled: true
               - name: envoy.router
 
   clusters:
