--- a/bpf/ubuntu/Vagrantfile
+++ b/bpf/ubuntu/Vagrantfile
@@ -49,13 +49,13 @@ Vagrant.configure("2") do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  # config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-  #   vb.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
-  # end
+  config.vm.provider "virtualbox" do |vb|
+    # Display the VirtualBox GUI when booting the machine
+    # vb.gui = true
+
+    # Customize the amount of memory on the VM:
+    vb.memory = "2048"
+  end
   #
   # View the documentation for the provider you are using for more
   # information on available options.
@@ -76,12 +76,19 @@ Vagrant.configure("2") do |config|
   config.vm.provision :reload
 
   config.vm.provision "shell", inline: <<-SHELL
-    apt-get install -y bpfcc-tools linux-headers-$(uname -r)
+    apt-get -y install bison build-essential cmake flex git libedit-dev \
+        libllvm6.0 llvm-6.0-dev libclang-6.0-dev python zlib1g-dev libelf-dev linux-headers-$(uname -r)
+    git clone https://github.com/iovisor/bcc.git
+    cd bcc && git checkout v0.11.0
+    mkdir build; cd build
+    cmake .. -DCMAKE_INSTALL_PREFIX=/usr
+    make && make install
 
-    wget "https://dl.google.com/go/go1.13.4.linux-amd64.tar.gz"
-    tar xvf "go1.13.4.linux-amd64.tar.gz"
+    apt-get install -y gcc
+    wget https://dl.google.com/go/go1.13.4.linux-amd64.tar.gz
+    tar xvf go1.13.4.linux-amd64.tar.gz
     mv ./go /usr/local/go
-    rm "go1.13.4.linux-amd64.tar.gz"
+    rm go1.13.4.linux-amd64.tar.gz
 
     echo 'export GOPATH=/home/vagrant/go' >> /home/vagrant/.bashrc
     echo 'export GOROOT=/usr/local/go' >> /home/vagrant/.bashrc
