--- a/linux/bpf/ubuntu/Vagrantfile
+++ b/linux/bpf/ubuntu/Vagrantfile
@@ -97,5 +97,5 @@ Vagrant.configure("2") do |config|
     echo 'cd /workspace' >> /home/vagrant/.bashrc
   SHELL
 
-  config.vm.synced_folder "../../", "/workspace"
+  config.vm.synced_folder "../../../", "/workspace"
 end
