--- a/kubernetes/istio-control-master/discovery.yaml
+++ b/kubernetes/istio-control-master/discovery.yaml
@@ -4,27 +4,27 @@ apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: istio-pilot
-  namespace: istio-master
+  namespace: istio-control-master
   labels:
     app: pilot
-    release: istio-master-istio-discovery-master
+    release: istio-control-master-istio-discovery
     istio: pilot
 spec:
   minAvailable: 1
   selector:
     matchLabels:
       app: pilot
-      release: istio-master-istio-discovery-master
+      release: istio-control-master-istio-discovery
       istio: pilot
 ---
 # Source: istio-discovery/templates/configmap-envoy.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: istio-master
+  namespace: istio-control-master
   name: pilot-envoy-config
   labels:
-    release: istio-master-istio-discovery-master
+    release: istio-control-master-istio-discovery
 data:
   envoy.yaml.tmpl: |-
     admin:
@@ -79,11 +79,11 @@ data:
               trusted_ca:
                 filename: /etc/certs/root-cert.pem
               verify_subject_alt_name:
-              - spiffe://cluster.local/ns/istio-master/sa/istio-galley-service-account
+              - spiffe://cluster.local/ns/istio-control-master/sa/istio-galley-service-account
 
         hosts:
           - socket_address:
-              address: istio-galley.istio-master
+              address: istio-galley.istio-control-master
               port_value: 15019
 
 
@@ -193,9 +193,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: istio
-  namespace: istio-master
+  namespace: istio-control-master
   labels:
-    release: istio-master-istio-discovery-master
+    release: istio-control-master-istio-discovery
 data:
 
   meshNetworks: |-
@@ -351,26 +351,26 @@ data:
       controlPlaneAuthPolicy: MUTUAL_TLS
       #
       # Address where istio Pilot service is running
-      discoveryAddress: istio-pilot.istio-master:15011
+      discoveryAddress: istio-pilot.istio-control-master:15011
 ---
 # Source: istio-discovery/templates/serviceaccount.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: istio-pilot-service-account
-  namespace: istio-master
+  namespace: istio-control-master
   labels:
     app: pilot
-    release: istio-master-istio-discovery-master
+    release: istio-control-master-istio-discovery
 ---
 # Source: istio-discovery/templates/clusterrole.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: istio-pilot-istio-master
+  name: istio-pilot-istio-control-master
   labels:
     app: pilot
-    release: istio-master-istio-discovery-master
+    release: istio-control-master-istio-discovery
 rules:
 - apiGroups: ["config.istio.io"]
   resources: ["*"]
@@ -416,28 +416,28 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: istio-pilot-istio-master
+  name: istio-pilot-istio-control-master
   labels:
     app: pilot
-    release: istio-master-istio-discovery-master
+    release: istio-control-master-istio-discovery
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: istio-pilot-istio-master
+  name: istio-pilot-istio-control-master
 subjects:
   - kind: ServiceAccount
     name: istio-pilot-service-account
-    namespace: istio-master
+    namespace: istio-control-master
 ---
 # Source: istio-discovery/templates/service.yaml
 apiVersion: v1
 kind: Service
 metadata:
   name: istio-pilot
-  namespace: istio-master
+  namespace: istio-control-master
   labels:
     app: pilot
-    release: istio-master-istio-discovery-master
+    release: istio-control-master-istio-discovery
     istio: pilot
 spec:
   ports:
@@ -457,11 +457,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: istio-pilot
-  namespace: istio-master
+  namespace: istio-control-master
   # TODO: default template doesn't have this, which one is right ?
   labels:
     app: pilot
-    release: istio-master-istio-discovery-master
+    release: istio-control-master-istio-discovery
     istio: pilot
 spec:
   strategy:
@@ -484,7 +484,7 @@ spec:
       serviceAccountName: istio-pilot-service-account
       containers:
         - name: discovery
-          image: "docker.io/istio/pilot:1.4.0"
+          image: "docker.io/istio/pilot:1.4.1"
           imagePullPolicy: IfNotPresent
           args:
           - "discovery"
@@ -534,7 +534,7 @@ spec:
           - name: config-volume
             mountPath: /etc/istio/config
         - name: istio-proxy
-          image: "docker.io/istio/proxyv2:1.4.0"
+          image: "docker.io/istio/proxyv2:1.4.1"
           imagePullPolicy: IfNotPresent
           ports:
           - containerPort: 15011
@@ -630,10 +630,10 @@ apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: istio-pilot
-  namespace: istio-master
+  namespace: istio-control-master
   labels:
     app: pilot
-    release: istio-master-istio-discovery-master
+    release: istio-control-master-istio-discovery
 spec:
   maxReplicas: 5
   minReplicas: 1
@@ -654,7 +654,7 @@ kind: "MeshPolicy"
 metadata:
   name: "default"
   labels:
-    release: istio-master-istio-discovery-master
+    release: istio-control-master-istio-discovery
 spec:
   peers:
   - mtls:
