--- a/kubernetes/istio-control/autoinject.yaml
+++ b/kubernetes/istio-control/autoinject.yaml
@@ -4,17 +4,17 @@ apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: istio-sidecar-injector
-  namespace: istio-master
+  namespace: istio-control
   labels:
     app: sidecar-injector
-    release: istio-master-istio-autoinject-master
+    release: istio-control-istio-autoinject-master
     istio: sidecar-injector
 spec:
   minAvailable: 1
   selector:
     matchLabels:
       app: sidecar-injector
-      release: istio-master-istio-autoinject-master
+      release: istio-control-istio-autoinject-master
       istio: sidecar-injector
 ---
 # Source: istio-autoinject/templates/configmap.yaml
@@ -22,9 +22,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: injector-mesh
-  namespace: istio-master
+  namespace: istio-control
   labels:
-    release: istio-master-istio-autoinject-master
+    release: istio-control-istio-autoinject-master
 data:
   # This is the 'mesh' config, loaded by the sidecar injector.
   # It is a different configmap from pilot to allow a-la-carte install of the injector and follow the model
@@ -69,27 +69,27 @@ data:
       tracing:
         zipkin:
           # Address of the Zipkin collector
-          address: zipkin.istio-telemetry-master:9411
+          address: zipkin.istio-telemetry:9411
       #
       # Mutual TLS authentication between sidecars and istio control plane.
       controlPlaneAuthPolicy: MUTUAL_TLS
       #
       # Address where istio Pilot service is running
-      discoveryAddress: istio-pilot.istio-master:15011
+      discoveryAddress: istio-pilot.istio-control:15011
 ---
 # Source: istio-autoinject/templates/sidecar-injector-configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: istio-sidecar-injector
-  namespace: istio-master
+  namespace: istio-control
   labels:
-    release: istio-master-istio-autoinject-master
+    release: istio-control-istio-autoinject-master
     app: sidecar-injector
     istio: sidecar-injector
 data:
   values: |-
-    {"certmanager":{"enabled":false},"clusterResources":true,"global":{"arch":{"amd64":2,"ppc64le":2,"s390x":2},"certificates":[],"configNamespace":"istio-master","configRootNamespace":"istio-system","configValidation":true,"controlPlaneSecurityEnabled":true,"createRemoteSvcEndpoints":false,"defaultConfigVisibilitySettings":[],"defaultNodeSelector":{},"defaultPodDisruptionBudget":{"enabled":true},"defaultResources":{"requests":{"cpu":"10m"}},"disablePolicyChecks":true,"enableHelmTest":false,"enableTracing":true,"hub":"docker.io/istio","imagePullPolicy":"IfNotPresent","imagePullSecrets":[],"istioNamespace":"istio-system","istioRemote":false,"k8sIngress":{"enableHttps":false,"enabled":false,"gatewayName":"ingressgateway"},"localityLbSetting":{"enabled":true},"logAsJson":false,"logging":{"level":"default:info"},"meshExpansion":{"enabled":false,"useILB":false},"meshID":"","meshNetworks":{},"mtls":{"auto":true,"enabled":false},"multiCluster":{"clusterName":"","enabled":false},"network":"","omitSidecarInjectorConfigMap":false,"oneNamespace":false,"operatorManageWebhooks":false,"outboundTrafficPolicy":{"mode":"ALLOW_ANY"},"policyCheckFailOpen":false,"policyNamespace":"istio-system","priorityClassName":"","prometheusNamespace":"istio-system","proxy":{"accessLogEncoding":"TEXT","accessLogFile":"","accessLogFormat":"","autoInject":"enabled","clusterDomain":"cluster.local","componentLogLevel":"misc:error","concurrency":2,"dnsRefreshRate":"300s","enableCoreDump":false,"envoyAccessLogService":{"enabled":false,"host":null,"port":null,"tcpKeepalive":{"interval":"10s","probes":3,"time":"10s"},"tlsSettings":{"caCertificates":null,"clientCertificate":null,"mode":"DISABLE","privateKey":null,"sni":null,"subjectAltNames":[]}},"envoyMetricsService":{"enabled":false,"host":null,"port":null,"tcpKeepalive":{"interval":"10s","probes":3,"time":"10s"},"tlsSettings":{"caCertificates":null,"clientCertificate":null,"mode":"DISABLE","privateKey":null,"sni":null,"subjectAltNames":[]}},"envoyStatsd":{"enabled":false,"host":null,"port":null},"excludeIPRanges":"","excludeInboundPorts":"","excludeOutboundPorts":"","image":"proxyv2","includeIPRanges":"*","includeInboundPorts":"*","kubevirtInterfaces":"","logLevel":"warning","privileged":false,"protocolDetectionTimeout":"100ms","readinessFailureThreshold":30,"readinessInitialDelaySeconds":1,"readinessPeriodSeconds":2,"resources":{"limits":{"cpu":"2000m","memory":"1024Mi"},"requests":{"cpu":"100m","memory":"128Mi"}},"statusPort":15020,"tracer":"zipkin"},"proxy_init":{"image":"proxyv2","resources":{"limits":{"cpu":"100m","memory":"50Mi"},"requests":{"cpu":"10m","memory":"10Mi"}}},"remotePilotAddress":"","remotePilotCreateSvcEndpoint":false,"remotePolicyAddress":"","remoteTelemetryAddress":"","sds":{"enabled":false,"token":{"aud":"istio-ca"},"udsPath":""},"tag":"1.4.0","telemetryNamespace":"istio-telemetry-master","tracer":{"datadog":{"address":"$(HOST_IP):8126"},"lightstep":{"accessToken":"","address":"","cacertPath":"","secure":true},"zipkin":{"address":""}},"trustDomain":"cluster.local","trustDomainAliases":[],"useMCP":true},"istio_cni":{"enabled":false},"sidecarInjectorWebhook":{"alwaysInjectSelector":[],"enableNamespacesByDefault":false,"image":"sidecar_injector","injectLabel":"istio-injection","injectedAnnotations":{},"neverInjectSelector":[],"nodeSelector":{},"objectSelector":{"autoInject":true,"enabled":false},"podAnnotations":{},"podAntiAffinityLabelSelector":[],"podAntiAffinityTermLabelSelector":[],"replicaCount":1,"resources":{},"rewriteAppHTTPProbe":false,"rollingMaxSurge":"100%","rollingMaxUnavailable":"25%","selfSigned":false,"tolerations":[]},"version":""}
+    {"certmanager":{"enabled":false},"clusterResources":true,"global":{"arch":{"amd64":2,"ppc64le":2,"s390x":2},"certificates":[],"configNamespace":"istio-control","configRootNamespace":"istio-system","configValidation":true,"controlPlaneSecurityEnabled":true,"createRemoteSvcEndpoints":false,"defaultConfigVisibilitySettings":[],"defaultNodeSelector":{},"defaultPodDisruptionBudget":{"enabled":true},"defaultResources":{"requests":{"cpu":"10m"}},"disablePolicyChecks":true,"enableHelmTest":false,"enableTracing":true,"hub":"docker.io/istio","imagePullPolicy":"IfNotPresent","imagePullSecrets":[],"istioNamespace":"istio-system","istioRemote":false,"k8sIngress":{"enableHttps":false,"enabled":false,"gatewayName":"ingressgateway"},"localityLbSetting":{"enabled":true},"logAsJson":false,"logging":{"level":"default:info"},"meshExpansion":{"enabled":false,"useILB":false},"meshID":"","meshNetworks":{},"mtls":{"auto":true,"enabled":false},"multiCluster":{"clusterName":"","enabled":false},"network":"","omitSidecarInjectorConfigMap":false,"oneNamespace":false,"operatorManageWebhooks":false,"outboundTrafficPolicy":{"mode":"ALLOW_ANY"},"policyCheckFailOpen":false,"policyNamespace":"istio-system","priorityClassName":"","prometheusNamespace":"istio-system","proxy":{"accessLogEncoding":"TEXT","accessLogFile":"","accessLogFormat":"","autoInject":"enabled","clusterDomain":"cluster.local","componentLogLevel":"misc:error","concurrency":2,"dnsRefreshRate":"300s","enableCoreDump":false,"envoyAccessLogService":{"enabled":false,"host":null,"port":null,"tcpKeepalive":{"interval":"10s","probes":3,"time":"10s"},"tlsSettings":{"caCertificates":null,"clientCertificate":null,"mode":"DISABLE","privateKey":null,"sni":null,"subjectAltNames":[]}},"envoyMetricsService":{"enabled":false,"host":null,"port":null,"tcpKeepalive":{"interval":"10s","probes":3,"time":"10s"},"tlsSettings":{"caCertificates":null,"clientCertificate":null,"mode":"DISABLE","privateKey":null,"sni":null,"subjectAltNames":[]}},"envoyStatsd":{"enabled":false,"host":null,"port":null},"excludeIPRanges":"","excludeInboundPorts":"","excludeOutboundPorts":"","image":"proxyv2","includeIPRanges":"*","includeInboundPorts":"*","kubevirtInterfaces":"","logLevel":"warning","privileged":false,"protocolDetectionTimeout":"100ms","readinessFailureThreshold":30,"readinessInitialDelaySeconds":1,"readinessPeriodSeconds":2,"resources":{"limits":{"cpu":"2000m","memory":"1024Mi"},"requests":{"cpu":"100m","memory":"128Mi"}},"statusPort":15020,"tracer":"zipkin"},"proxy_init":{"image":"proxyv2","resources":{"limits":{"cpu":"100m","memory":"50Mi"},"requests":{"cpu":"10m","memory":"10Mi"}}},"remotePilotAddress":"","remotePilotCreateSvcEndpoint":false,"remotePolicyAddress":"","remoteTelemetryAddress":"","sds":{"enabled":false,"token":{"aud":"istio-ca"},"udsPath":""},"tag":"1.4.0","telemetryNamespace":"istio-telemetry","tracer":{"datadog":{"address":"$(HOST_IP):8126"},"lightstep":{"accessToken":"","address":"","cacertPath":"","secure":true},"zipkin":{"address":""}},"trustDomain":"cluster.local","trustDomainAliases":[],"useMCP":true},"istio_cni":{"enabled":false},"sidecarInjectorWebhook":{"alwaysInjectSelector":[],"enableNamespacesByDefault":false,"image":"sidecar_injector","injectLabel":"istio-injection","injectedAnnotations":{},"neverInjectSelector":[],"nodeSelector":{},"objectSelector":{"autoInject":true,"enabled":false},"podAnnotations":{},"podAntiAffinityLabelSelector":[],"podAntiAffinityTermLabelSelector":[],"replicaCount":1,"resources":{},"rewriteAppHTTPProbe":false,"rollingMaxSurge":"100%","rollingMaxUnavailable":"25%","selfSigned":false,"tolerations":[]},"version":""}
 
   config: |-
     policy: enabled
@@ -497,20 +497,20 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: istio-sidecar-injector-service-account
-  namespace: istio-master
+  namespace: istio-control
   labels:
     app: sidecarInjectorWebhook
-    release: istio-master-istio-autoinject-master
+    release: istio-control-istio-autoinject-master
     istio: sidecar-injector
 ---
 # Source: istio-autoinject/templates/clusterrole.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: istio-sidecar-injector-istio-master
+  name: istio-sidecar-injector-istio-control
   labels:
     app: sidecar-injector
-    release: istio-master-istio-autoinject-master
+    release: istio-control-istio-autoinject-master
     istio: sidecar-injector
 rules:
 - apiGroups: [""]
@@ -519,36 +519,36 @@ rules:
   verbs: ["get", "list", "watch"]
 - apiGroups: ["admissionregistration.k8s.io"]
   resources: ["mutatingwebhookconfigurations"]
-  resourceNames: ["istio-sidecar-injector", "istio-sidecar-injector-istio-master"]
+  resourceNames: ["istio-sidecar-injector", "istio-sidecar-injector-istio-control"]
   verbs: ["get", "list", "watch", "patch"]
 ---
 # Source: istio-autoinject/templates/clusterrolebinding.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: istio-sidecar-injector-admin-role-binding-istio-master
+  name: istio-sidecar-injector-admin-role-binding-istio-control
   labels:
     app: sidecar-injector
-    release: istio-master-istio-autoinject-master
+    release: istio-control-istio-autoinject-master
     istio: sidecar-injector
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: istio-sidecar-injector-istio-master
+  name: istio-sidecar-injector-istio-control
 subjects:
   - kind: ServiceAccount
     name: istio-sidecar-injector-service-account
-    namespace: istio-master
+    namespace: istio-control
 ---
 # Source: istio-autoinject/templates/service.yaml
 apiVersion: v1
 kind: Service
 metadata:
   name: istio-sidecar-injector
-  namespace: istio-master
+  namespace: istio-control
   labels:
     app: sidecarInjectorWebhook
-    release: istio-master-istio-autoinject-master
+    release: istio-control-istio-autoinject-master
     istio: sidecar-injector
 spec:
   ports:
@@ -562,10 +562,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: istio-sidecar-injector
-  namespace: istio-master
+  namespace: istio-control
   labels:
     app: sidecarInjectorWebhook
-    release: istio-master-istio-autoinject-master
+    release: istio-control-istio-autoinject-master
     istio: sidecar-injector
 spec:
   replicas: 1
@@ -599,7 +599,7 @@ spec:
             - --healthCheckInterval=2s
             - --healthCheckFile=/tmp/health
             - --reconcileWebhookConfig=true
-            - --webhookConfigName=istio-sidecar-injector-istio-master
+            - --webhookConfigName=istio-sidecar-injector-istio-control
             - --log_output_level=debug
           
               
@@ -688,16 +688,16 @@ spec:
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
-  name: istio-sidecar-injector-istio-master
+  name: istio-sidecar-injector-istio-control
   labels:
     app: sidecar-injector
-    release: istio-master-istio-autoinject-master
+    release: istio-control-istio-autoinject-master
 webhooks:
   - name: sidecar-injector.istio.io
     clientConfig:
       service:
         name: istio-sidecar-injector
-        namespace: istio-master
+        namespace: istio-control
         path: "/inject"
       caBundle: ""
     rules:
