--- a/kubernetes/istio-telemetry/mixer.yaml
+++ b/kubernetes/istio-telemetry/mixer.yaml
@@ -481,7 +481,7 @@ spec:
           - --address
           - unix:///sock/mixer.socket
           - --log_output_level=default:info
-          - --configStoreURL=mcp://localhost:15019
+          - --configStoreURL=k8s://
           - --configDefaultNamespace=istio-telemetry
           - --useAdapterCRDs=false
           - --useTemplateCRDs=false
@@ -502,9 +502,6 @@ spec:
             cpu: 1000m
             memory: 1G
         volumeMounts:
-        - name: istio-certs
-          mountPath: /etc/certs
-          readOnly: true
         - name: uds-socket
           mountPath: /sock
         - name: telemetry-adapter-secret
@@ -1047,11 +1044,10 @@ spec:
     # kubeconfig_path: "mixer/adapter/kubernetes/kubeconfig"
 ---
 # Source: mixer-telemetry/templates/config.yaml
----
 apiVersion: "config.istio.io/v1alpha2"
 kind: instance
 metadata:
-  name: requestcount
+  name: requestsize
   namespace: istio-telemetry
   labels:
     app: istio-telemetry
@@ -1059,7 +1055,7 @@ metadata:
 spec:
   compiledTemplate: metric
   params:
-    value: "1"
+    value: request.size | 0
     dimensions:
       reporter: conditional((context.reporter.kind | "inbound") == "outbound", "source", "destination")
       source_workload: source.workload.name | "unknown"
@@ -1081,38 +1077,6 @@ spec:
       permissive_response_code: rbac.permissive.response_code | "none"
       permissive_response_policyid: rbac.permissive.effective_policy_id | "none"
       connection_security_policy: conditional((context.reporter.kind | "inbound") == "outbound", "unknown", conditional(connection.mtls | false, "mutual_tls", "none"))
-    monitored_resource_type: '"UNSPECIFIED"'
----
-# Source: mixer-telemetry/templates/config.yaml
-apiVersion: "config.istio.io/v1alpha2"
-kind: instance
-metadata:
-  name: tcpbytesent
-  namespace: istio-telemetry
-  labels:
-    app: istio-telemetry
-    release: istio-telemetry-istio-mixer
-spec:
-  compiledTemplate: metric
-  params:
-    value: connection.sent.bytes | 0
-    dimensions:
-      reporter: conditional((context.reporter.kind | "inbound") == "outbound", "source", "destination")
-      source_workload: source.workload.name | "unknown"
-      source_workload_namespace: source.workload.namespace | "unknown"
-      source_principal: source.principal | "unknown"
-      source_app: source.labels["app"] | "unknown"
-      source_version: source.labels["version"] | "unknown"
-      destination_workload: destination.workload.name | "unknown"
-      destination_workload_namespace: destination.workload.namespace | "unknown"
-      destination_principal: destination.principal | "unknown"
-      destination_app: destination.labels["app"] | "unknown"
-      destination_version: destination.labels["version"] | "unknown"
-      destination_service: destination.service.host | "unknown"
-      destination_service_name: destination.service.name | "unknown"
-      destination_service_namespace: destination.service.namespace | "unknown"
-      connection_security_policy: conditional((context.reporter.kind | "inbound") == "outbound", "unknown", conditional(connection.mtls | false, "mutual_tls", "none"))
-      response_flags: context.proxy_error_code | "-"
     monitored_resource_type: '"UNSPECIFIED"'
 ---
 # Source: mixer-telemetry/templates/config.yaml
@@ -1193,7 +1157,7 @@ spec:
 apiVersion: "config.istio.io/v1alpha2"
 kind: instance
 metadata:
-  name: requestduration
+  name: tcpbytesent
   namespace: istio-telemetry
   labels:
     app: istio-telemetry
@@ -1201,7 +1165,7 @@ metadata:
 spec:
   compiledTemplate: metric
   params:
-    value: response.duration | "0ms"
+    value: connection.sent.bytes | 0
     dimensions:
       reporter: conditional((context.reporter.kind | "inbound") == "outbound", "source", "destination")
       source_workload: source.workload.name | "unknown"
@@ -1214,22 +1178,18 @@ spec:
       destination_principal: destination.principal | "unknown"
       destination_app: destination.labels["app"] | "unknown"
       destination_version: destination.labels["version"] | "unknown"
-      destination_service: destination.service.host | conditional((destination.service.name | "unknown") == "unknown", "unknown", request.host)
+      destination_service: destination.service.host | "unknown"
       destination_service_name: destination.service.name | "unknown"
       destination_service_namespace: destination.service.namespace | "unknown"
-      request_protocol: api.protocol | context.protocol | "unknown"
-      response_code: response.code | 200
-      response_flags: context.proxy_error_code | "-"
-      permissive_response_code: rbac.permissive.response_code | "none"
-      permissive_response_policyid: rbac.permissive.effective_policy_id | "none"
       connection_security_policy: conditional((context.reporter.kind | "inbound") == "outbound", "unknown", conditional(connection.mtls | false, "mutual_tls", "none"))
+      response_flags: context.proxy_error_code | "-"
     monitored_resource_type: '"UNSPECIFIED"'
 ---
 # Source: mixer-telemetry/templates/config.yaml
 apiVersion: "config.istio.io/v1alpha2"
 kind: instance
 metadata:
-  name: requestsize
+  name: tcpconnectionsopened
   namespace: istio-telemetry
   labels:
     app: istio-telemetry
@@ -1237,7 +1197,7 @@ metadata:
 spec:
   compiledTemplate: metric
   params:
-    value: request.size | 0
+    value: "1"
     dimensions:
       reporter: conditional((context.reporter.kind | "inbound") == "outbound", "source", "destination")
       source_workload: source.workload.name | "unknown"
@@ -1250,15 +1210,11 @@ spec:
       destination_principal: destination.principal | "unknown"
       destination_app: destination.labels["app"] | "unknown"
       destination_version: destination.labels["version"] | "unknown"
-      destination_service: destination.service.host | conditional((destination.service.name | "unknown") == "unknown", "unknown", request.host)
+      destination_service: destination.service.host | "unknown"
       destination_service_name: destination.service.name | "unknown"
       destination_service_namespace: destination.service.namespace | "unknown"
-      request_protocol: api.protocol | context.protocol | "unknown"
-      response_code: response.code | 200
-      response_flags: context.proxy_error_code | "-"
-      permissive_response_code: rbac.permissive.response_code | "none"
-      permissive_response_policyid: rbac.permissive.effective_policy_id | "none"
       connection_security_policy: conditional((context.reporter.kind | "inbound") == "outbound", "unknown", conditional(connection.mtls | false, "mutual_tls", "none"))
+      response_flags: context.proxy_error_code | "-"
     monitored_resource_type: '"UNSPECIFIED"'
 ---
 # Source: mixer-telemetry/templates/config.yaml
@@ -1333,7 +1289,44 @@ spec:
 apiVersion: "config.istio.io/v1alpha2"
 kind: instance
 metadata:
-  name: tcpconnectionsopened
+  name: requestduration
+  namespace: istio-telemetry
+  labels:
+    app: istio-telemetry
+    release: istio-telemetry-istio-mixer
+spec:
+  compiledTemplate: metric
+  params:
+    value: response.duration | "0ms"
+    dimensions:
+      reporter: conditional((context.reporter.kind | "inbound") == "outbound", "source", "destination")
+      source_workload: source.workload.name | "unknown"
+      source_workload_namespace: source.workload.namespace | "unknown"
+      source_principal: source.principal | "unknown"
+      source_app: source.labels["app"] | "unknown"
+      source_version: source.labels["version"] | "unknown"
+      destination_workload: destination.workload.name | "unknown"
+      destination_workload_namespace: destination.workload.namespace | "unknown"
+      destination_principal: destination.principal | "unknown"
+      destination_app: destination.labels["app"] | "unknown"
+      destination_version: destination.labels["version"] | "unknown"
+      destination_service: destination.service.host | conditional((destination.service.name | "unknown") == "unknown", "unknown", request.host)
+      destination_service_name: destination.service.name | "unknown"
+      destination_service_namespace: destination.service.namespace | "unknown"
+      request_protocol: api.protocol | context.protocol | "unknown"
+      response_code: response.code | 200
+      response_flags: context.proxy_error_code | "-"
+      permissive_response_code: rbac.permissive.response_code | "none"
+      permissive_response_policyid: rbac.permissive.effective_policy_id | "none"
+      connection_security_policy: conditional((context.reporter.kind | "inbound") == "outbound", "unknown", conditional(connection.mtls | false, "mutual_tls", "none"))
+    monitored_resource_type: '"UNSPECIFIED"'
+---
+# Source: mixer-telemetry/templates/config.yaml
+---
+apiVersion: "config.istio.io/v1alpha2"
+kind: instance
+metadata:
+  name: requestcount
   namespace: istio-telemetry
   labels:
     app: istio-telemetry
@@ -1354,44 +1347,32 @@ spec:
       destination_principal: destination.principal | "unknown"
       destination_app: destination.labels["app"] | "unknown"
       destination_version: destination.labels["version"] | "unknown"
-      destination_service: destination.service.host | "unknown"
+      destination_service: destination.service.host | conditional((destination.service.name | "unknown") == "unknown", "unknown", request.host)
       destination_service_name: destination.service.name | "unknown"
       destination_service_namespace: destination.service.namespace | "unknown"
-      connection_security_policy: conditional((context.reporter.kind | "inbound") == "outbound", "unknown", conditional(connection.mtls | false, "mutual_tls", "none"))
+      request_protocol: api.protocol | context.protocol | "unknown"
+      response_code: response.code | 200
       response_flags: context.proxy_error_code | "-"
+      permissive_response_code: rbac.permissive.response_code | "none"
+      permissive_response_policyid: rbac.permissive.effective_policy_id | "none"
+      connection_security_policy: conditional((context.reporter.kind | "inbound") == "outbound", "unknown", conditional(connection.mtls | false, "mutual_tls", "none"))
     monitored_resource_type: '"UNSPECIFIED"'
 ---
 # Source: mixer-telemetry/templates/config.yaml
 apiVersion: "config.istio.io/v1alpha2"
 kind: rule
 metadata:
-  name: promtcpconnectionopen
+  name: tcpkubeattrgenrulerule
   namespace: istio-telemetry
   labels:
     app: istio-telemetry
     release: istio-telemetry-istio-mixer
 spec:
-  match: context.protocol == "tcp" && ((connection.event | "na") == "open")
+  match: context.protocol == "tcp"
   actions:
-  - handler: prometheus
+  - handler: kubernetesenv
     instances:
-    - tcpconnectionsopened
----
-# Source: mixer-telemetry/templates/config.yaml
-apiVersion: "config.istio.io/v1alpha2"
-kind: rule
-metadata:
-  name: promtcpconnectionclosed
-  namespace: istio-telemetry
-  labels:
-    app: istio-telemetry
-    release: istio-telemetry-istio-mixer
-spec:
-  match: context.protocol == "tcp" && ((connection.event | "na") == "close")
-  actions:
-  - handler: prometheus
-    instances:
-    - tcpconnectionsclosed
+    - attributes
 ---
 # Source: mixer-telemetry/templates/config.yaml
 apiVersion: "config.istio.io/v1alpha2"
@@ -1411,6 +1392,22 @@ spec:
     - requestduration
     - requestsize
     - responsesize
+---
+# Source: mixer-telemetry/templates/config.yaml
+apiVersion: "config.istio.io/v1alpha2"
+kind: rule
+metadata:
+  name: promtcpconnectionclosed
+  namespace: istio-telemetry
+  labels:
+    app: istio-telemetry
+    release: istio-telemetry-istio-mixer
+spec:
+  match: context.protocol == "tcp" && ((connection.event | "na") == "close")
+  actions:
+  - handler: prometheus
+    instances:
+    - tcpconnectionsclosed
 ---
 # Source: mixer-telemetry/templates/config.yaml
 apiVersion: "config.istio.io/v1alpha2"
@@ -1448,14 +1445,14 @@ spec:
 apiVersion: "config.istio.io/v1alpha2"
 kind: rule
 metadata:
-  name: tcpkubeattrgenrulerule
+  name: promtcpconnectionopen
   namespace: istio-telemetry
   labels:
     app: istio-telemetry
     release: istio-telemetry-istio-mixer
 spec:
-  match: context.protocol == "tcp"
+  match: context.protocol == "tcp" && ((connection.event | "na") == "open")
   actions:
-  - handler: kubernetesenv
+  - handler: prometheus
     instances:
-    - attributes
+    - tcpconnectionsopened
