--- a/kubernetes/istio-control/discovery.yaml
+++ b/kubernetes/istio-control/discovery.yaml
@@ -232,7 +232,7 @@ data:
     podAntiAffinityLabelSelector: []
     podAntiAffinityTermLabelSelector: []
     policy:
-      enabled: false
+      enabled: true
     replicaCount: 1
     resources:
       requests:
@@ -254,16 +254,19 @@ data:
     enableEnvoyAccessLogService: false
     mixerCheckServer: istio-policy.istio-policy.svc.cluster.local:15004
     mixerReportServer: istio-telemetry.istio-telemetry.svc.cluster.local:15004
-    # policyCheckFailOpen allows traffic in cases when the mixer policy service cannot be reached.
-    # Default is false which means the traffic is denied when the client is unable to connect to Mixer.
-    policyCheckFailOpen: false
     # reportBatchMaxEntries is the number of requests that are batched before telemetry data is sent to the mixer server
     reportBatchMaxEntries: 100
     # reportBatchMaxTime is the max waiting time before the telemetry data of a request is sent to the mixer server
     reportBatchMaxTime: 1s
     disableMixerHttpReports: false
 
-    disablePolicyChecks: true
+    # Set the following variable to true to disable policy checks by the Mixer.
+    # Note that metrics will still be reported to the Mixer.
+    disablePolicyChecks: false
+
+    # policyCheckFailOpen allows traffic in cases when the mixer policy service cannot be reached.
+    # Default is false which means the traffic is denied when the client is unable to connect to Mixer.
+    policyCheckFailOpen: false
 
 
     # This is the k8s ingress service name, update if you used a different name
@@ -594,7 +597,7 @@ spec:
         secret:
           secretName: istio.istio-pilot-service-account
           optional: true
-      affinity:
+      affinity:      
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
