--- a/kubernetes/grpcserver1/deployment.yaml
+++ b/kubernetes/grpcserver1/deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: grpcserver2
+  name: grpcserver1
   labels:
     istio-injection: enabled
 ---
@@ -10,15 +10,15 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: grpcserver2
-  name: grpcserver2
-  namespace: grpcserver2
+    app: grpcserver1
+  name: grpcserver1
+  namespace: grpcserver1
 spec:
   replicas: 2
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: grpcserver2
+      app: grpcserver1
   strategy:
     rollingUpdate:
       maxSurge: 100%
@@ -27,25 +27,25 @@ spec:
   template:
     metadata:
       labels:
-        app: grpcserver2
+        app: grpcserver1
     spec:
       containers:
-        - image: ghcr.io/110y/lab/grpcserver2:latest
-          imagePullPolicy: Never
-          name: grpcserver2
+        - image: ghcr.io/110y/lab/grpcserver1:latest
+          imagePullPolicy: IfNotPresent
+          name: grpcserver1
           ports:
             - containerPort: 9000
               name: grpc
               protocol: TCP
           env:
-            - name: FOO
-              value: 'FOO'
+            - name: GRPCSERVER2_ENDPOINT
+              value: 'grpcserver2.grpcserver2.svc.cluster.local:9000'
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: grpcserver2
-  namespace: grpcserver2
+  name: grpcserver1
+  namespace: grpcserver1
 spec:
   type: ClusterIP
   ports:
@@ -54,4 +54,4 @@ spec:
       protocol: TCP
       targetPort: 9000
   selector:
-    app: grpcserver2
+    app: grpcserver1
