update EnvoyFitler lua version

--- a/kubernetes/istio-lab/envoy_filter.yaml
+++ b/kubernetes/istio-lab/envoy_filter.yaml
@@ -77,9 +77,9 @@ spec:
       patch:
         operation: INSERT_AFTER
         value:
-          name: envoy.lua
+          name: envoy.filters.http.lua
           typed_config:
-            "@type": "type.googleapis.com/envoy.config.filter.http.lua.v2.Lua"
+            "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
             inlineCode: |
               function envoy_on_request(request)
                   local ok, message = pcall(handle_request, request)
