--- a/kubernetes/grpcserver2/deployment.yaml
+++ b/kubernetes/grpcserver2/deployment.yaml
@@ -30,11 +30,11 @@ spec:
         app: grpcserver2
     spec:
       containers:
-        - image: ghcr.io/110y/lab/grpcserver2:latest
-          imagePullPolicy: Never
+        - image: ${CONTAINER_REGISTRY}/grpcserver2:4b08f25
+          imagePullPolicy: Always
           name: grpcserver2
           ports:
-            - containerPort: 9000
+            - containerPort: 7000
               name: grpc
               protocol: TCP
           env:
@@ -50,8 +50,8 @@ spec:
   type: ClusterIP
   ports:
     - name: grpc
-      port: 9000
+      port: 7000
       protocol: TCP
-      targetPort: 9000
+      targetPort: 7000
   selector:
     app: grpcserver2
